# smartcontract-verification

./: CHANGELOG.md  README.md  conditional.py  reader.py  solidity-verification.cabal  test_conditional.py
app/: CFG.hs  DefinitionUseAnalysis.hs  LiveVariables.hs  Main.hs  Parser.hs  Profile.hs  Reader.hs  SolidityFeature.hs
paper/: memory-storage.tex
sample-solidity/: counter.sol  reentrancy.sol  simple-if.sol  structs.sol
smt/: jar.smt  jar_alllock.smt  jar_lock.smt  jar_secure.smt
test-solidity/: first.sol  if-then-else.sol
